# TelegramGroupHelperBot

./: .env.example  .gitignore  AGENTS.md  AUTHORS  CHANGES.md  Dockerfile  LICENSE  Makefile  README-MIGRATIONS.md  README.md  alembic.ini  allowed_chat.txt.example  fly.toml  get_chat_id.py  openrouter_models.json.example  pyproject.toml  pytest.ini  requirements.txt  tmp_query_chat_ids.py
.github/workflows/: ci.yml
bot/: __init__.py  config.py  cwd_uploader.py  handlers.py  llm.py  main.py
bot/db/: __init__.py  database.py  models.py
bot/handlers/: __init__.py  access.py  commands.py  content.py  qa.py  responses.py
bot/llm/: __init__.py  clients.py  exa_search.py  gemini.py  jina_search.py  media.py  openrouter.py  rag.py
bot/tools/: cwd_uploader.py  file_search_cli.py  rag_import.py  telegraph_extractor.py  twitter_extractor.py
bot/utils/: __init__.py  http.py  timing.py
docs/: module_summary.md
migrations/: env.py
migrations/versions/: 53244dba3a71_initial_schema.py  add_unique_constraint.py  initial_migration.py
tests/: __init__.py
tests/integration/: __init__.py  test_q_reply.py  test_telegraph.py  test_tldr.py
tests/unit/: __init__.py  test_betaq_handler.py  test_cwd_uploader.py  test_factcheck_lang.py  test_handlers.py  test_llm.py  test_telegraph.py  test_tldr_language.py  test_whitelist.py
